# piper-phonemize

./: .dockerignore  .gitignore  .gitmodules  .projectile  CMakeLists.txt  Dockerfile  MANIFEST.in  Makefile  README.md  piper_phonemize.pc.in  setup.py
.github/workflows/: main.yml  test.yml  windows.yml
piper_phonemize/: .gitignore  __init__.py
src/: main.cpp  phoneme_ids.cpp  phoneme_ids.hpp  phonemize.cpp  phonemize.hpp  python.cpp  python_test.py  shared.cpp  shared.hpp  tashkeel.cpp  tashkeel.hpp  test.cpp
